--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,81 +1,78 @@
-
-
-
- 
-    <div class="container fondo-secundario">
+<div class="container fondo-secundario">
+  <div class="container">
+    <section class="jumbotron text-center text-white texto-resaltado">
       <div class="container">
-        <section class="jumbotron text-center text-white texto-resaltado">
-          <div class="container">
-            <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
-            <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
-          </div>
-        </section>
-      </div><br>
-
-      <div>
-        <section class="container text-white texto-resaltado">
-          <div class="row">
-            <div class="col-md-6 mb-4">
-              <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
-              <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
-                estrés<br>
-                <a>¡Hazte Cliente!</a>
-              </p><br>
-            </div>
-            <div class="col-md-6 mb-4">
-              <img src="assets/online.jpg " class="img-fluid rounded"  style="width: 300px; height: 200px; ">
-
-            </div>
-          </div>
-        </section>
-      </div><br>
-
-      <div class="container">
-        <section class="container text-white texto-resaltado">
-          <div class="row">
-            <div class="col-md-6 mb-2">
-              <h2>CONECTADO SIEMPRE CONTIGO</h2>
-              <p>365 días del año siempre estaremos a tu disposición</p><br>
-              <div>
-                <div class="text-white" style="font-size: 100px; font-weight: bold; font-family: Arial, sans-serif;">0% </div><span style="display: inline;"><h3> de intereses</h3></span>
-                <div class="col-md-12 mb-12 text-center">
-                  <p class="text-uppercase" style="font-size: 48px; font-weight: bold; margin: top 0px;"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 mb-2">
-              <img src="assets/prueba3.jpg " class="img-fluid rounded"  style="width: 300px; height: 250px; ">
-            </div>
-          </div>
-        </section>
+        <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
+        <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
       </div>
-      <div class= "container fondo-primario">
-        <section class="container  text-white texto-resaltado">
-          <div class="row conta" >
-            <div class="col-md-5 mb-9" style="color: green;">
-              <ul id="letra"><br>
-                <li>disfruta de lo que mas te gusta</li><br>
-                <li>sin preocupasiones</li><br>
-                <li>siemrpe a tu disposición</li><br>
-                <li>sin cargas extras en tu CUENTA</li><br>
-                <li>TU FELICIDAD ES LA NUESTRA </li><br>
-              </ul>
+    </section>
+  </div><br>
 
-            </div>
-            <div class="col-md-5 mb-9"><br><br>
-              <div class="d-flex justify-content-end align-items-center">
-                <img src="assets/felices.jpg" class="img-fluid rounded"  style="width: 400px; height: 300px; " >
-              </div>
+  <div>
+    <section class="container text-white texto-resaltado">
+      <div class="row">
+        <div class="col-md-6 mb-4">
+          <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
+          <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
+            estrés<br>
+            <a>¡Hazte Cliente!</a>
+          </p><br>
+        </div>
+        <div class="col-md-6 mb-4">
+          <img src="assets/online.jpg " class="img-fluid rounded" style="width: 300px; height: 200px; ">
+
+        </div>
+      </div>
+    </section>
+  </div><br>
+
+  <div class="container">
+    <section class="container text-white texto-resaltado">
+      <div class="row">
+        <div class="col-md-6 mb-2">
+          <h2>CONECTADO SIEMPRE CONTIGO</h2>
+          <p>365 días del año siempre estaremos a tu disposición</p><br>
+          <div>
+            <div class="text-white" style="font-size: 100px; font-weight: bold; font-family: Arial, sans-serif;">0%
+            </div><span style="display: inline;">
+              <h3> de intereses</h3>
+            </span>
+            <div class="col-md-12 mb-12 text-center">
+              <p class="text-uppercase" style="font-size: 48px; font-weight: bold; margin: top 0px;"></p>
             </div>
           </div>
-        </section>
+        </div>
+        <div class="col-md-6 mb-2">
+          <img src="assets/prueba3.jpg " class="img-fluid rounded" style="width: 300px; height: 250px; ">
+        </div>
       </div>
+    </section>
+  </div>
+  <div class="container fondo-primario">
+    <section class="container  text-white texto-resaltado">
+      <div class="row conta">
+        <div class="col-md-5 mb-9" style="color: green;">
+          <ul id="letra"><br>
+            <li>disfruta de lo que mas te gusta</li><br>
+            <li>sin preocupasiones</li><br>
+            <li>siemrpe a tu disposición</li><br>
+            <li>sin cargas extras en tu CUENTA</li><br>
+            <li>TU FELICIDAD ES LA NUESTRA </li><br>
+          </ul>
 
-      <div class="container-fluid p-5 text-white text-center texto-resaltado">
-        <h1>LA QUIERES YA</h1>
-        <h2>en menos de diez minutos lo puedes hacer!</h2>
-        <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+        </div>
+        <div class="col-md-5 mb-9"><br><br>
+          <div class="d-flex justify-content-end align-items-center">
+            <img src="assets/felices.jpg" class="img-fluid rounded" style="width: 400px; height: 300px; ">
+          </div>
+        </div>
       </div>
-    </div>
-  
+    </section>
+  </div>
 
+  <div class="container-fluid p-5 text-white text-center texto-resaltado">
+    <h1>LA QUIERES YA</h1>
+    <h2>en menos de diez minutos lo puedes hacer!</h2>
+    <a class="btn btn-light btn-lg" href="#" role="button">¡Hazte Cliente!</a>
+  </div>
+</div>
