--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -20,7 +20,7 @@
 
     </footer>
 </div>
-<!--<footer>
+<!-- <footer>
     <mat-toolbar color="primary">
       <span>© {{ currentYear }} Mi Sitio Web</span>
       <span class="fill-remaining-space"></span>
@@ -29,5 +29,5 @@
       <a mat-button href="https://miweb.com/contacto">Contacto</a>
       <a mat-button href="https://springboot.com">Spring Boot</a>
     </mat-toolbar>
-  </footer>
-   -->
+  </footer> -->
+   
