--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,12 +45,12 @@
             </div>
         </div>
     </div>
-    <div>
+    <!-- <div>
         <button class="button-success" type="button" (click)="getFees()">get fees</button>
     </div>
     <div>
         <button class="button-success" type="button" (click)="meterTokenfalso()">meter token falso</button>
-    </div>
+    </div> -->
     <div *ngIf="!logado" class="fondoBtnLogin">
         <button class="btnHazteCliente">Hazte cliente</button>
         <button class="btnLogin texto-primario" type="button" data-bs-toggle="collapse"
