--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,12 @@
+<app-user></app-user>
+
+
+
+
+
+
+
+
 <div class="container fondo-secundario">
   <div class="container">
     <section class="jumbotron text-center text-white texto-resaltado">
