--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -1,33 +1,61 @@
-<h1><p>Una tabla para gobernarlos a todos!</p></h1>
-<select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
-    <option selected>Open this select menu</option>
-    <option value="awardsFines">AwardsFine</option>
-    <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
-    <option value="awardFinesTypes">AwardFinesType</option>
-    <option value="configurations">Configuration</option>
-    <option value="currentAccounts">CurrentAccount</option>
-    <option value="descriptions">Description</option>
-    <option value="fees">Fee</option>
-    <option value="identificationTypes">IdentificationType</option>
-    <option value="profiles">Profile</option>
-    <option value="roles">Rol</option>
-    <option value="transactions">Transaction</option>
-    <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
-    <option value="typeAccounts">TypeAccount</option>
-    <option value="users">User</option>    
-  </select>
-  <h2>{{ tablaAConsultar }} </h2>
-  <table *ngIf="mostrarTabla" class="table table-success table-striped table-hover">
-    <thead>
-      <tr>
-        <th scope="col"*ngFor="let cabecera of cabecerasTabla">{{cabecera}}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let dato of datosBrutos">
-        <td *ngFor="let lineaDato of dato">{{lineaDato}}</td>
-    </tbody>
-  </table>
-  <div>
-    <button class="button-success" type="button" (click)="duplicarUltimoDato()">duplicar un dato de prueba</button>
+<h1>
+  <p>Una tabla para gobernarlos a todos!</p>
+</h1>
+<div>
+  <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
 </div>
+
+<div *ngIf="mostrarGrabador">
+  <div class="mb-3 mt-3">
+    <div *ngFor="let cabecera of cabecerasTabla, let i = index">
+      <label class="form-label">{{cabecera}}</label>
+      <input type="text" class="form-control" [id]="'input'+i">
+    </div>
+  </div>
+</div>
+<select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
+  <option selected>Open this select menu</option>
+  <option value="awardsFines">AwardsFine</option>
+  <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
+  <option value="awardFinesTypes">AwardFinesType</option>
+  <option value="configurations">Configuration</option>
+  <option value="currentAccounts">CurrentAccount</option>
+  <option value="descriptions">Description</option>
+  <option value="fees">Fee</option>
+  <option value="identificationsTypes">IdentificationsType</option>
+  <option value="profiles">Profile</option>
+  <option value="roles">Rol</option>
+  <option value="transactions">Transaction</option>
+  <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
+  <option value="typeAccounts">TypeAccount</option>
+  <option value="users">User</option>
+</select>
+<h2>{{ tablaAConsultar }} </h2>
+<table *ngIf="mostrarTabla" class="table table-success table-striped table-hover">
+  <thead>
+    <tr>
+      <th scope="col" *ngFor="let cabecera of cabecerasTabla">{{cabecera}}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let dato of datosBrutos">
+      <td *ngFor="let lineaDato of dato">{{lineaDato}}</td>
+      <td><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24"
+          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
+          <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
+          <path d="M16 5l3 3"></path>
+        </svg></td>
+      <td><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash-x" width="24" height="24"
+          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M4 7h16"></path>
+          <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
+          <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
+          <path d="M10 12l4 4m0 -4l-4 4"></path>
+        </svg></td>
+  </tbody>
+</table>
