--- a/src/app/componentes/modal-card-types/modal-card-types.component.html
+++ b/src/app/componentes/modal-card-types/modal-card-types.component.html
@@ -6,14 +6,14 @@
 
             <!-- Modal Header -->
             <div class="modal-header justify-content-center"> 
-                <h4 class="modal-title ">ALTA DE TIPO DE DOCUMENTO</h4>
+                <h4 class="modal-title ">ALTA DE TIPO DE TARJETA</h4>
 
             </div>
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <label for="descripcion">Descripcion:</label><input type="text" name="descripcion"
-                    [(ngModel)]="descripcion" value="{{descripcionPlaceHolder}}"><br>
+                <label for="descripcion">TARJETA:</label><input type="text" name="cardType"
+                    [(ngModel)]="cardType" value="{{cardTypePlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
             <div class="text-center">
