--- a/src/app/componentes/card-type/card-type.component.html
+++ b/src/app/componentes/card-type/card-type.component.html
@@ -6,13 +6,13 @@
             <th class="text-center">DESCRIPCION</th>
             <th class="text-center">ACCIONES</th>
         </tr>
-        <tr *ngFor="let descripcion of descripciones">
-            <td class="text-center">{{descripcion.description}}</td>
+        <tr *ngFor="let cardType of cardTypes">
+            <td class="text-center">{{cardType.cardType}}</td>
             <td class="text-center">
-                <a href="#" (click)="modificar(descripcion)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                <a href="#" (click)="modificar(cardType)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(descripcion._links.self.href.substring(descripcion._links.self.href.lastIndexOf('/')+1))">
+                <a href="#" (click)="eliminar(cardType._links.self.href.substring(cardType._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
@@ -20,5 +20,5 @@
     </table>
     <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
             data-bs-target="#myModal">ALTA</button></div>
-    <app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>
+    <app-modal-card-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-card-types>
 </div>
