--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -1,23 +1,12 @@
 <h1>
   <p>Una tabla para gobernarlos a todos!</p>
 </h1>
-<div>
-  <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
-</div>
 
-<div *ngIf="mostrarGrabador">
-  <div class="mb-3 mt-3">
-    <div *ngFor="let cabecera of cabecerasTabla, let i = index">
-      <label class="form-label">{{cabecera}}</label>
-      <input type="text" class="form-control" [id]="'input'+i">
-    </div>
-  </div>
-</div>
 <select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
   <option selected>Open this select menu</option>
-  <option value="awardsFines">AwardsFine</option>
+  <option value="awardFine">AwardsFine</option>
   <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
-  <option value="awardFinesTypes">AwardFinesType</option>
+  <option value="awardsFinesTypes">AwardFinesType</option>
   <option value="configurations">Configuration</option>
   <option value="currentAccounts">CurrentAccount</option>
   <option value="descriptions">Description</option>
@@ -38,19 +27,19 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let dato of datosBrutos">
+    <tr *ngFor="let dato of datosBrutos, let i = index" [id]="'lineaDato'+i">
       <td *ngFor="let lineaDato of dato">{{lineaDato}}</td>
-      <td><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24"
+      <td><svg xmlns="http://www.w3.org/2000/svg" role='button' class="icon icon-tabler icon-tabler-edit" width="24" height="24"
           viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
+          stroke-linejoin="round" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
           <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
           <path d="M16 5l3 3"></path>
         </svg></td>
-      <td><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash-x" width="24" height="24"
+      <td><svg xmlns="http://www.w3.org/2000/svg" role='button' class="icon icon-tabler icon-tabler-trash-x" width="24" height="24"
           viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-          stroke-linejoin="round">
+          stroke-linejoin="round" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M4 7h16"></path>
           <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
@@ -59,3 +48,37 @@
         </svg></td>
   </tbody>
 </table>
+
+<!-- Button trigger modal -->
+<button *ngIf="mostrarGrabador" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Nuevo
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"  data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">        
+        <div>
+          <div class="mb-3 mt-3">
+            <div *ngFor="let cabecera of cabecerasTabla, let i = index">
+              <label class="form-label">{{cabecera}}</label>
+              <input type="text" class="form-control" [id]="'input'+i">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">        
+        <div>
+          <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
+        </div>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>
