--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
 <app-document-types></app-document-types>
-
+<app-category></app-category>
