--- a/src/app/componentes/category/category.component.html
+++ b/src/app/componentes/category/category.component.html
@@ -7,7 +7,7 @@
             <th class="text-center">ACCIONES</th>
         </tr>
         <tr *ngFor="let category of categories">
-            <td class="text-center">{{category.category}}</td>
+            <td class="text-center">{{category.description}}</td>
             <td class="text-center">
                 <a href="#" (click)="modificar(category)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
