--- a/src/app/componentes/modal-category/modal-category.component.html
+++ b/src/app/componentes/modal-category/modal-category.component.html
@@ -10,8 +10,8 @@
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <label for="descripcion">Categoria:</label><input type="text" name="category"
-                    [(ngModel)]="category" value="{{categoryPlaceHolder}}"><br>
+                <label for="descripcion">Categoria:</label><input type="text" name="descripcion"
+                    [(ngModel)]="descripcion" value="{{categoryPlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
             <div class="text-center">
