--- a/src/app/componentes/modal-card-types/modal-card-types.component.html
+++ b/src/app/componentes/modal-card-types/modal-card-types.component.html
@@ -13,7 +13,7 @@
             <!-- Modal body -->
             <div class="modal-body text-center">
                 <label for="descripcion">TARJETA:</label><input type="text" name="cardType"
-                    [(ngModel)]="cardType" value="{{cardTypePlaceHolder}}"><br>
+                    [(ngModel)]="descripcion" value="{{descripcionPlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
             <div class="text-center">
