--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
-<app-document-types></app-document-types>
 <app-card-type></app-card-type>
+<app-footer></app-footer>
