--- a/src/app/componentes/card-type/card-type.component.html
+++ b/src/app/componentes/card-type/card-type.component.html
@@ -6,13 +6,13 @@
             <th class="text-center">DESCRIPCION</th>
             <th class="text-center">ACCIONES</th>
         </tr>
-        <tr *ngFor="let descripcion of descripciones">
-            <td class="text-center">{{descripcion.cardType}}</td>
+        <tr *ngFor="let tarjeta of tarjetas">
+            <td class="text-center">{{tarjeta.description}}</td>
             <td class="text-center">
-                <a href="#" (click)="modificar(descripcion)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                <a href="#" (click)="modificar(tarjeta)" data-bs-toggle="modal" data-bs-target="#myModal"><i
                         class="bi bi-pencil-fill"></i>
                 </a>
-                <a href="#" (click)="eliminar(descripcion._links.self.href.substring(descripcion._links.self.href.lastIndexOf('/')+1))">
+                <a href="#" (click)="eliminar(tarjeta._links.self.href.substring(tarjeta._links.self.href.lastIndexOf('/')+1))">
                     <i class="bi bi-trash3-fill"></i>
                 </a>
             </td>
