--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -1,83 +1,97 @@
-<h1>
-  <p>Una tabla para gobernarlos a todos!</p>
-</h1>
+<div class="container">
+  <h1>
+    <p>Una tabla para gobernarlos a todos!</p>
+  </h1>
 
-<select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
-  <option selected>Open this select menu</option>
-  <option value="awardFine">AwardsFine</option>
-  <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
-  <option value="awardsFinesTypes">AwardFinesType</option>
-  <option value="configurations">Configuration</option>
-  <option value="currentAccounts">CurrentAccount</option>
-  <option value="descriptions">Description</option>
-  <option value="fees">Fee</option>
-  <option value="identificationsTypes">IdentificationsType</option>
-  <option value="profiles">Profile</option>
-  <option value="roles">Rol</option>
-  <option value="transactions">Transaction</option>
-  <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
-  <option value="typeAccounts">TypeAccount</option>
-  <option value="users">User</option>
-</select>
-<h2>{{ tablaAConsultar }} </h2>
-<table *ngIf="mostrarTabla" class="table table-success table-striped table-hover">
-  <thead>
-    <tr>
-      <th scope="col" *ngFor="let cabecera of cabecerasTabla">{{cabecera}}</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let dato of datosBrutos, let i = index" [id]="'lineaDato'+i">
-      <td *ngFor="let lineaDato of dato">{{lineaDato}}</td>
-      <td><svg xmlns="http://www.w3.org/2000/svg" role='button' class="icon icon-tabler icon-tabler-edit" width="24" height="24"
-          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-          stroke-linejoin="round" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
-          <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
-          <path d="M16 5l3 3"></path>
-        </svg></td>
-      <td><svg xmlns="http://www.w3.org/2000/svg" role='button' class="icon icon-tabler icon-tabler-trash-x" width="24" height="24"
-          viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
-          stroke-linejoin="round" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M4 7h16"></path>
-          <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
-          <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
-          <path d="M10 12l4 4m0 -4l-4 4"></path>
-        </svg></td>
-  </tbody>
-</table>
+  <select class="form-select" aria-label="Default select example" #select (change)="consultarTabla(select.value)">
+    <option selected>Open this select menu</option>
+    <option value="awardFine">AwardsFine</option>
+    <option value="awardsFinesConfigurations">AwardsFinesConfiguration</option>
+    <option value="awardsFinesTypes">AwardFinesType</option>
+    <option value="configurations">Configuration</option>
+    <option value="currentAccounts">CurrentAccount</option>
+    <option value="descriptions">Description</option>
+    <option value="fees">Fee</option>
+    <option value="identificationsTypes">IdentificationsType</option>
+    <option value="profiles">Profile</option>
+    <option value="roles">Rol</option>
+    <option value="transactions">Transaction</option>
+    <option value="transactionsAwardsFines">TransactionsAwardsFine</option>
+    <option value="typeAccounts">TypeAccount</option>
+    <option value="users">User</option>
+  </select>
+  <h2>{{ tablaAConsultar }} </h2>
+  <table *ngIf="mostrarTabla" class="table table-success table-striped table-hover">
+    <thead>
+      <tr>
+        <th class="bg-success text-white" scope="col" *ngFor="let cabecera of cabecerasTabla">{{cabecera}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dato of datosBrutos, let i = index" [id]="'lineaDato'+i">
+        <td *ngFor="let lineaDato of dato">{{lineaDato}}</td>
+        <td width="10px" class="text-success"><svg xmlns="http://www.w3.org/2000/svg" role='button' class="icon icon-tabler icon-tabler-edit"
+            width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+            stroke-linecap="round" stroke-linejoin="round" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+            (click)="cargarDatosDeLinea(i,false)">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
+            <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
+            <path d="M16 5l3 3"></path>
+          </svg></td>
+        <td width="10px" class="text-danger"><svg xmlns="http://www.w3.org/2000/svg" role='button'
+            class="icon icon-tabler icon-tabler-trash-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2"
+            stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" (click)="borrarLinea(i)">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M4 7h16"></path>
+            <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
+            <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
+            <path d="M10 12l4 4m0 -4l-4 4"></path>
+          </svg></td>
+    </tbody>
+  </table>
 
-<!-- Button trigger modal -->
-<button *ngIf="mostrarGrabador" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-  Nuevo
-</button>
+  <!-- Button trigger modal -->
+  <button *ngIf="mostrarGrabador" type="button" class="btn btn-primary" data-bs-toggle="modal"
+    data-bs-target="#staticBackdrop" (click)="cargarDatosDeLinea(0,true)">
+    Nuevo
+  </button>
 
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"  data-bs-backdrop="false">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">        
-        <div>
-          <div class="mb-3 mt-3">
-            <div *ngFor="let cabecera of cabecerasTabla, let i = index">
-              <label class="form-label">{{cabecera}}</label>
-              <input type="text" class="form-control" [id]="'input'+i">
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true" data-bs-backdrop="false">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div>
+            <div class="mb-3 mt-3">
+              <div *ngFor="let cabecera of cabecerasTabla, let i = index">
+                <label class="form-label">{{cabecera}}</label>
+                <div *ngIf="datosDeUnaSolaLinea[i] != undefined && i==0, else elseBlock">
+                  <input type="text" class="form-control" value="{{datosDeUnaSolaLinea[i]}}" [id]="'input'+i" disabled>
+                </div>
+                <ng-template #elseBlock>
+                  <div *ngIf="i == 0, else resto">
+                    <input type="text" class="form-control" value="0" [id]="'input'+i" disabled>
+                  </div>
+                  <ng-template #resto>
+                    <input type="text" class="form-control" value="{{datosDeUnaSolaLinea[i]}}" [id]="'input'+i">
+                  </ng-template>
+                </ng-template>
+              </div>
             </div>
           </div>
+          <div class="modal-footer">
+            <div>
+              <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
+            </div>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">        
-        <div>
-          <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
-        </div>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Understood</button>
       </div>
     </div>
   </div>
