--- a/src/app/panel-administrador/panel-administrador.component.html
+++ b/src/app/panel-administrador/panel-administrador.component.html
@@ -52,9 +52,15 @@
   </table>
 
   <!-- Button trigger modal -->
-  <button *ngIf="mostrarGrabador" type="button" class="btn btn-primary" data-bs-toggle="modal"
+  <button *ngIf="mostrarGrabador" type="button" class="btn btn-success" data-bs-toggle="modal"
     data-bs-target="#staticBackdrop" (click)="cargarDatosDeLinea(0,true)">
-    Nuevo
+    Nuevo<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-plus ms-1" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+      <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"></path>
+      <path d="M12 11l0 6"></path>
+      <path d="M9 14l6 0"></path>
+   </svg>
   </button>
 
   <!-- Modal -->
@@ -87,9 +93,9 @@
           </div>
           <div class="modal-footer">
             <div>
-              <button class="button-success" type="button" (click)="grabarEntrada()">grabarEntrada</button>
+            <button class="btn btn-success" type="button" data-bs-dismiss="modal" (click)="grabarEntrada()">grabarEntrada</button>
             </div>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
