--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -1,1 +1,29 @@
-<p>movimientos works!</p>
+<!DOCTYPE html>
+<html>
+<head></head>
+<body>
+  <h2>Lista de movimientos</h2>
+  <table>
+    <tr>
+      <th>Fecha</th>
+      <th>Concepto</th>
+      <th>Importe</th>
+    </tr>
+    <tr>
+      <td>01/06/2023</td>
+      <td>Comida</td>
+      <td>$20.00</td>
+    </tr>
+    <tr>
+      <td>05/06/2023</td>
+      <td>Transporte</td>
+      <td>$10.50</td>
+    </tr>
+    <tr>
+      <td>10/06/2023</td>
+      <td>Ropa</td>
+      <td>$50.00</td>
+    </tr>
+  </table>
+</body>
+</html>
