--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 
 <app-header></app-header>
+<!--
 <router-outlet></router-outlet>
+-->
+<app-configuration></app-configuration>
 <app-footer></app-footer>
 
