--- a/src/app/componentes/configuration/configuration.component.html
+++ b/src/app/componentes/configuration/configuration.component.html
@@ -1,1 +1,24 @@
-<p>configuration works!</p>
+<div>
+    <h1 class="text-center">{{titulo}}</h1>
+    <h1 class="text-center">{{mensaje}}</h1>
+    <table class="table table-stripped table-bordered">
+        <tr>
+            <th class="text-center">ALARMADO</th>
+            <th class="text-center">ACCIONES</th>
+        </tr>
+        <tr *ngFor="let alarmaStock of alarmados">
+            <td class="text-center">{{alarmaStock.stockAlarm}}</td>
+            <td class="text-center">
+                <a href="#" (click)="modificar(alarmaStock)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                        class="bi bi-pencil-fill"></i>
+                </a>
+                <a href="#" (click)="eliminar(alarmaStock._links.self.href.substring(alarmaStock._links.self.href.lastIndexOf('/')+1))">
+                    <i class="bi bi-trash3-fill"></i>
+                </a>
+            </td>
+        </tr>
+    </table>
+    <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
+            data-bs-target="#myModal">ALTA</button></div>
+    <app-modal-configuration (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-configuration>
+</div>
