--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
-<app-category></app-category>
 
+<app-subcategory></app-subcategory>
 
 
 
