--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,7 +12,7 @@
     <section class="jumbotron text-center text-white texto-resaltado">
       <div class="container">
         <h1 class="display-4">¡Bienvenido al banco de tus sueños!</h1><br>
-        <p class="lead">LA CUENTA QUE SE ADAPTA A TU VIDA</p>
+        <p class="lead">EL BANCO QUE VELA POR TUS INTERESES, NO EL QUE TE LOS COBRA</p>
       </div>
     </section>
   </div><br>
@@ -23,7 +23,7 @@
         <div class="col-md-6 mb-4">
           <h2>Con el Servicio Cambio de Banco <br> haremos la gestión por ti</h2>
           <p>Una forma gratuita de traer tus ingresos y tus recibos,<br> tus cuentas de otros bancos, sin papeleos y
-            estrés<br>
+            estrés.<br>
             <a>¡Hazte Cliente!</a>
           </p><br>
         </div>
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-md-6 mb-2">
           <h2>CONECTADO SIEMPRE CONTIGO</h2>
-          <p>365 días del año siempre estaremos a tu disposición</p><br>
+          <p>365 días del año siempre estaremos a tu disposición.</p><br>
           <div>
             <div class="text-white" style="font-size: 100px; font-weight: bold; font-family: Arial, sans-serif;">0%
             </div><span style="display: inline;">
@@ -62,10 +62,10 @@
       <div class="row conta">
         <div class="col-md-5 mb-9" style="color: green;">
           <ul id="letra"><br>
-            <li>disfruta de lo que mas te gusta</li><br>
-            <li>sin preocupasiones</li><br>
-            <li>siemrpe a tu disposición</li><br>
-            <li>sin cargas extras en tu CUENTA</li><br>
+            <li>Disfruta de lo que mas te gusta</li><br>
+            <li>Sin Preocupaciones</li><br>
+            <li>Siempre a tu disposición</li><br>
+            <li>Sin cargas extras en tu CUENTA</li><br>
             <li>TU FELICIDAD ES LA NUESTRA </li><br>
           </ul>
 
