--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-header></app-header>
 <!--<router-outlet></router-outlet>-->
-<app-ejemplo></app-ejemplo>
-
+<!--<app-ejemplo></app-ejemplo>
+<app-existing-product></app-existing-product>-->
+<app-profile></app-profile>
