--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -1,1 +1,32 @@
-<p>existing-product works!</p>
+<div class="container mt-3">
+  <h1 class="text-center">{{titulo}}</h1>
+
+  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo producto</button>
+
+    <table class="table table-stripped table-bordered w-100">
+      <th> Imagen </th>
+      <th> Descripción </th>
+      <th> Precio de venta </th>
+      <th> Existencias </th>
+
+      <tr *ngFor="let element of elements">
+        <td><img src="{{ element.image }}"></td>
+        <td> {{ element.description }} </td>
+        <td> {{ element.price }} </td>
+        <td> {{ element.stock }} </td>
+
+        <td class="text-center">
+          <a href="#" (click)="modificar(element)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                  class="bi bi-pencil-fill"></i>
+          </a>
+          <a href="#" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))">
+              <i class="bi bi-trash3-fill"></i>
+          </a>
+        </td>
+      </tr>
+    </table>
+    <!--<app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>-->
+
+    <h5 class="text-center">{{mensaje}}</h5>
+  </div>
+
