--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -1,5 +1,51 @@
 <div class="container mt-3">
-<!--  <div class="mat-elevation-z8">
+  <h1 class="text-center">{{titulo}}</h1>
+
+  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo usuario</button>
+
+    <table class="table table-stripped table-bordered w-100">
+      <th> Foto </th>
+      <th> Identificación </th>
+      <th> Nombre </th>
+      <th> Apellido </th>
+      <th> Dirección </th>
+      <th> C. Postal </th>
+      <th> Provincia </th>
+      <th> País </th>
+      <th> Email </th>
+      <th> Teléfono </th>
+      <th> Tarjeta crédito </th>
+
+      <tr *ngFor="let element of elements">
+        <td><img src="{{ element.photo }}"> </td>
+        <td> {{ element.name }} </td>
+        <td> {{ element.identification }} </td>
+        <td> {{ element.lastname }} </td>
+        <td> {{ element.address }} </td>
+        <td> {{ element.postal_code }} </td>
+        <td> {{ element.city }} </td>
+        <td> {{ element.country }} </td>
+        <td> {{ element.email }} </td>
+        <td> {{ element.phone }} </td>
+        <td> {{ element.credit_card }} </td>
+
+        <td class="text-center">
+          <a href="#" (click)="modificar(element)" data-bs-toggle="modal" data-bs-target="#myModal"><i
+                  class="bi bi-pencil-fill"></i>
+          </a>
+          <a href="#" (click)="eliminar(element._links.self.href.substring(element._links.self.href.lastIndexOf('/')+1))">
+              <i class="bi bi-trash3-fill"></i>
+          </a>
+        </td>
+      </tr>
+    </table>
+    <app-modal-profiles (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-profiles>
+
+    <h5 class="text-center">{{mensaje}}</h5>
+  </div>
+
+
+  <!--  <div class="mat-elevation-z8">
     <h2>Lista de perfiles</h2>
     <button type="button" class="btn btn-primary d-md-block me-2 mt-2 mb-2 rounded-0" >Añadir nuevo usuario</button>
     <input type="text" [(ngModel)]="searchText" (input)="filterData()" placeholder="Buscar por descripción" class="w-100">
@@ -66,33 +112,3 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
   </div>-->
-
-
-  <div>
-    <h1 class="text-center">{{titulo}}</h1>
-    <h1 class="text-center">{{mensaje}}</h1>
-    <table class="table table-stripped table-bordered">
-        <tr>
-            <th class="text-center">DESCRIPCION</th>
-            <th class="text-center">ACCIONES</th>
-        </tr>
-        <tr *ngFor="let descripcion of descripciones">
-            <td class="text-center">{{descripcion.description}}</td>
-            <td class="text-center">
-                <a href="#" (click)="modificar(descripcion)" data-bs-toggle="modal" data-bs-target="#myModal"><i
-                        class="bi bi-pencil-fill"></i>
-                </a>
-                <a href="#" (click)="eliminar(descripcion._links.self.href.substring(descripcion._links.self.href.lastIndexOf('/')+1))">
-                    <i class="bi bi-trash3-fill"></i>
-                </a>
-            </td>
-        </tr>
-    </table>
-    <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"
-            data-bs-target="#myModal">ALTA</button></div>
-    <app-modal-document-types (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-document-types>
-</div>
-
-
-
-  </div>
