Modificado los componentes

--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -18,9 +18,9 @@
 
       <tr *ngFor="let element of elements">
         <td><img src="{{ element.photo }}"> </td>
-        <td> {{ element.name }} </td>
         <td> {{ element.identification }} </td>
-        <td> {{ element.lastname }} </td>
+        <td> {{ element.name }} </td>
+        <td> {{ element.last_name }} </td>
         <td> {{ element.address }} </td>
         <td> {{ element.postal_code }} </td>
         <td> {{ element.city }} </td>
