--- a/src/app/componentes/modal-user/modal-user.component.html
+++ b/src/app/componentes/modal-user/modal-user.component.html
@@ -1,28 +1,28 @@
-<div>
-    <h1 class="text-center">{{titulo}}</h1>
-    <h1 class="text-center">{{mensaje}}</h1>
-    <table class="table table-stripped table-bordered">
-        <tr>
-            <th class="text-center">USUARIOS</th>
-            <th class="text-center">ROLES</th>
-        </tr>
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
 
-        <tr *ngFor="let usuario of usuarios">
-            <td class="text-center">{{usuario.user}}</td>
-            <td class="text-center">
-                <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal">
-                    <i class="bi bi-pencil-fill"></i>
-                </a>
+            <!-- Modal Header -->
+            <div class="modal-header justify-content-center">
+                <h4 class="modal-title">ALTA USUARIO</h4>
+            </div>
 
-                <a href="#" (click)="eliminar(usuario._links.self.href.substring(usuario._links.self.href.lastIndexOf('/')+1))">
-                    <i class="bi bi-trash3-fill"></i>
-                </a>
-            </td>
-        </tr>
-    </table>
-    <div class="text-center">
-        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal"data-bs-target="#myModal">ALTA</button>
-        <app-modal-user (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-user>
+            <!-- Modal Body -->
+            <div class="modal-body text-center">
+                <label for="usuario">Usuario</label>
+                <input type="text" name="usuario" [(ngModel)]="usuario" value="{{usuarioPlaceHolder}}"><br>
+                <button type="button" class="button" (click)="grabar()">GRABAR</button>
+            </div>
+            <div class="text-center">
+                <h1>{{mensaje}}</h1>
+            </div>
 
+            <!-- Modal Footer -->
+            <div class="modal-footer justify-content-center">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="realizarComunicacion()"></button>
+            </div>
+
+        </div>
     </div>
 </div>
