--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -1,1 +1,25 @@
-<p>user works!</p>
+<div>
+    <h1 class="text-center">{{titulo}}</h1>
+    <h1 class="text-center">{{mensaje}}</h1>
+
+    <table class="table table-stripped table-bordered">
+        <tr>
+            <th class="text-center">USUARIOS</th>
+            <th class="text-center">ACCIONES</th>
+        </tr>
+        <tr *ngFor="let usuario of usuarios">
+            <td class="text-center">{{usuario.user}}</td>
+            <td class="text-center">
+                <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal"> 
+                    <i class="bi bi-pencil-fill"></i> </a>
+                <a href="#" (click)="eliminar(usuario._links.self.href.substring(usuario._links.self.href.lastIndexOf('/')+1))">
+                    <i class="bi bi-trash3-fill"></i> </a>
+            </td>
+        </tr>
+    </table>
+
+    <div class="text-center">
+        <button type="button" class="btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
+        <app-modal-user (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-user>
+    </div>
+</div>
