--- a/src/app/componentes/modal-configuration/modal-configuration.component.html
+++ b/src/app/componentes/modal-configuration/modal-configuration.component.html
@@ -1,11 +1,15 @@
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal fade" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <!-- Modal Header -->
             <div class="modal-header justify-content-center"> 
                 <h4 class="modal-title ">CONFIGURACIÓN</h4>
+            </div>
+
+            <div class="modal-header justify-content-center"> 
+                <h5 class="text-center">Nombre accion: {{titulo}}</h5>
             </div>
 
             <!-- Modal body -->
