--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -77,7 +77,7 @@
         <div class="contenedorLogin">
             <div class="formularioLogin">
                 <h2>Soy cliente</h2>
-                <form action="#" method="post" spellcheck="false">
+                <form spellcheck="false">
                     <div class="inputCasilla">
                         <span class="iconito">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" width="24"
