--- a/src/app/componentes/modal-card-types/modal-card-types.component.html
+++ b/src/app/componentes/modal-card-types/modal-card-types.component.html
@@ -1,27 +1,27 @@
-
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal fade" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <!-- Modal Header -->
-            <div class="modal-header justify-content-center"> 
+            <div class="modal-header justify-content-center">
                 <h4 class="modal-title ">ALTA DE TIPO DE TARJETA</h4>
 
             </div>
 
             <!-- Modal body -->
             <div class="modal-body text-center">
-                <label for="descripcion">TARJETA:</label><input type="text" name="cardType"
-                    [(ngModel)]="descripcion" value="{{descripcionPlaceHolder}}"><br>
+                <label for="descripcion">TARJETA:</label><input type="text" name="cardType" [(ngModel)]="descripcion"
+                    value="{{descripcionPlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
             <div class="text-center">
-                <h1 >{{mensaje}}</h1>
+                <h1>{{mensaje}}</h1>
             </div>
             <!-- Modal footer -->
             <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="realizarComunicacion()">Cerrar</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                    (click)="realizarComunicacion()">Cerrar</button>
             </div>
 
         </div>
