--- a/src/app/componentes/modal-document-types/modal-document-types.component.html
+++ b/src/app/componentes/modal-document-types/modal-document-types.component.html
@@ -1,6 +1,6 @@
 
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
 
