--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -15,7 +15,7 @@
     <a href="#" class="float-right text-muted">He olvidado mi contraseña</a>
 </div>
 <!--===============================================-->
-<div class="modalConectando oculto" id="modalConectando">
+<!--<div class="modalConectando oculto" id="modalConectando">
     <div class="contenedorModal mx-auto mt-5">
         <div class="align-items-center">
             <div class="p-2 mx-1 justify-content-center">Estableciendo conexión segura</div>
@@ -105,4 +105,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
