--- a/src/app/componentes/modal-rol/modal-rol.component.html
+++ b/src/app/componentes/modal-rol/modal-rol.component.html
@@ -10,10 +10,8 @@
 
             <!-- Modal Body-->
             <div class="modal-body text-center">
-                <label for="rol">Rol:
-                    <input type="text" name="rol"
-                    [(ngModel)]="rol" value="{{rolPlaceholder}}"><br>
-                </label>
+                <label for="rol">Rol:</label>
+                    <input type="text" name="rol" [(ngModel)]="rol" value="{{rolPlaceHolder}}"><br>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
 
