--- a/src/app/componentes/modal-user/modal-user.component.html
+++ b/src/app/componentes/modal-user/modal-user.component.html
@@ -12,6 +12,11 @@
             <div class="modal-body text-center">
                 <label for="usuario">Usuario</label>
                 <input type="text" name="usuario" [(ngModel)]="usuario" value="{{usuarioPlaceHolder}}"><br>
+                <label for="rol">rol:</label>
+                <select [(ngModel)]="rol">
+                    <option value="0">Seleccione rol...</option>
+                    <option *ngFor="let fun of roles" value="{{fun._links.self.href.substring(fun._links.self.href.lastIndexOf('/')+1)}}">{{fun.rol}}</option>
+                </select>
                 <button type="button" class="button" (click)="grabar()">GRABAR</button>
             </div>
             <div class="text-center">
