--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -21,7 +21,8 @@
             </td>
         </tr>
     </table>
-    <div class="text-center"><button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
+    <div class="text-center">
+        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
     </div>
     <app-modal-rol (eventoComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-rol>
 </div>
