--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -19,7 +19,7 @@
     </table>
 
     <div class="text-center">
-        <button type="button" class="btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
+        <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
         <app-modal-user (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-user>
     </div>
 </div>
