--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head></head>
-<body>
+<div class="table-container">
   <h2>Lista de movimientos</h2>
   <table>
     <tr>
@@ -25,5 +22,4 @@
       <td>$50.00</td>
     </tr>
   </table>
-</body>
-</html>
+</div>
