añadir congiguración al nav

--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -41,4 +41,7 @@
     <li class="nav-item">
       <a class="nav-link active bg-dark text-white" href="Fidelidad">Fidelidad</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link active bg-dark text-white" href="Configuración">Configuración</a>
+    </li>
 
