--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,9 +16,9 @@
     <div class="logoCabecera" routerLink="landing">
         <span>
             <h1>B</h1>
-            <h4>ANC</h4>
-            <h1>S</h1>
-            <h4>ERTA</h4>
+            <h4>ANK</h4>
+            <h1>I</h1>
+            <h4>NSERT</h4>
         </span>
     </div>
     <div class="tiempoCabecera texto-resaltado">
