--- a/src/app/componentes/modal-user/modal-user.component.html
+++ b/src/app/componentes/modal-user/modal-user.component.html
@@ -1,11 +1,11 @@
 <!-- The Modal -->
-<div class="modal" id="myModal">
+<div class="modal fade" id="myModal" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
 
             <!-- Modal Header -->
             <div class="modal-header justify-content-center">
-                <h4 class="modal-title">ALTA USUARIO</h4>
+                <h4 class="modal-title">{{subtitulo}} USUARIO</h4>
             </div>
 
             <!-- Modal Body -->
