--- a/src/app/componentes/rol/rol.component.html
+++ b/src/app/componentes/rol/rol.component.html
@@ -24,5 +24,5 @@
     <div class="text-center">
         <button type="button" class="btn btn-primary justify-content-center" data-bs-toggle="modal" data-bs-target="#myModal">ALTA</button>
     </div>
-    <app-modal-rol (eventoComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-rol>
+    <app-modal-rol (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-rol>
 </div>
