--- a/src/app/componentes/user/user.component.html
+++ b/src/app/componentes/user/user.component.html
@@ -5,10 +5,16 @@
     <table class="table table-stripped table-bordered">
         <tr>
             <th class="text-center">USUARIOS</th>
+            <th class="text-center">PASSWORD</th>
+            <th class="text-center">ENABLED</th>
+            <th class="text-center">ROL</th>
             <th class="text-center">ACCIONES</th>
         </tr>
         <tr *ngFor="let usuario of usuarios">
             <td class="text-center">{{usuario.user}}</td>
+            <!--<td class="text-center">{{clave.password}}</td>
+            <td class="text-center">{{habilitado.enabled}}</td>
+            <td class="text-center">{{rol.user}}</td>-->
             <td class="text-center">
                 <a href="#" (click)="modificar(usuario)" data-bs-toggle="modal" data-bs-target="#myModal"> 
                     <i class="bi bi-pencil-fill"></i> </a>
