--- a/src/app/componentes/profile/profile.component.html
+++ b/src/app/componentes/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <h1 class="text-center">{{titulo}}</h1>
 
-  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo usuario</button>
-
+  <!--<button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" data-bs-toggle="modal" data-bs-target="#myModal">Añadir nuevo usuario</button>-->
+  <button type="button" class="btn btn-primary d-md-block me-2 mt-3 mb-3" (click)="abrirModal()">Añadir nuevo usuario</button>
     <table class="table table-stripped table-bordered w-100">
       <th> Foto </th>
       <th> Identificación </th>
@@ -41,74 +41,5 @@
     </table>
     <app-modal-profiles (eventoAComunicar)="realizarComunicacion($event)" id="{{id}}"></app-modal-profiles>
 
-    <h5 class="text-center">{{mensaje}}</h5>
+    <h5 class="text-center">{{ mensaje }}</h5>
   </div>
-
-
-  <!--  <div class="mat-elevation-z8">
-    <h2>Lista de perfiles</h2>
-    <button type="button" class="btn btn-primary d-md-block me-2 mt-2 mb-2 rounded-0" >Añadir nuevo usuario</button>
-    <input type="text" [(ngModel)]="searchText" (input)="filterData()" placeholder="Buscar por descripción" class="w-100">
-
-    <table mat-table [dataSource]="dataSource" class="w-100">
-      <ng-container matColumnDef="position" >
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element" > {{element.position}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="photo">
-        <th mat-header-cell *matHeaderCellDef> Foto </th>
-        <td mat-cell *matCellDef="let element"> {{element.photo}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="lastname">
-        <th mat-header-cell *matHeaderCellDef> Apellido </th>
-        <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="identification">
-        <th mat-header-cell *matHeaderCellDef> Identificación </th>
-        <td mat-cell *matCellDef="let element"> {{element.identification}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="creditcard">
-        <th mat-header-cell *matHeaderCellDef> Tarjeta crédito </th>
-        <td mat-cell *matCellDef="let element"> {{element.creditcard}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="province">
-        <th mat-header-cell *matHeaderCellDef> Provincia </th>
-        <td mat-cell *matCellDef="let element"> {{element.province}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="nuser">
-        <th mat-header-cell *matHeaderCellDef> Nº. Usuario </th>
-        <td mat-cell *matCellDef="let element"> {{element.nuser}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="ncreditcard">
-        <th mat-header-cell *matHeaderCellDef> Nº Tarjeta Crédito </th>
-        <td mat-cell *matCellDef="let element"> {{element.ncreditcard}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="ndocument">
-        <th mat-header-cell *matHeaderCellDef> Nº Documento </th>
-        <td mat-cell *matCellDef="let element"> {{element.ndocument}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements"></mat-paginator>
-  </div>-->
